# yaya

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GOAL.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  yaya.spec
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bdd_task.yml  bug_report.yml  chore.yml  documentation.yml  feature_request.yml  refactor.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  pr-title-checker.yml  release-please.yml  release.yml
dev/agent-friendly-cli/: index.html
dev/agent-spec/: index.html
dev/architecture/: index.html
dev/bdd-workflow/: index.html
dev/cli/: index.html
dev/code-comments/: index.html
dev/debug/: index.html
dev/maintaining-agent-md/: index.html
dev/multi-agent/: index.html
dev/no-agent-frameworks/: index.html
dev/plugin-protocol/: index.html
dev/release/: index.html
dev/testing/: index.html
dev/web-ui/: index.html
dev/workflow/: index.html
docs/: agent-spec.md  cli.md  goal.md  index.md  install.md  testing.md  usage.md  workflow.md
docs/dev/: agent-friendly-cli.md  agent-spec.md  architecture.md  bdd-workflow.md  cli.md  code-comments.md  debug.md  maintaining-agent-md.md  multi-agent.md  no-agent-frameworks.md  plugin-protocol.md  release.md  testing.md  web-ui.md  workflow.md
docs/guide/: usage.md
docs/wiki/: AGENT.md  index.md  lessons-learned.md  log.md
docs/wiki/sources/: bmad-method.md  karpathy-llm-wiki.md
goal/: index.html
guide/install/: index.html
guide/usage/: index.html
scripts/: AGENT.md  _detect_owning_spec.py  _parse_spec_result.py  check_banned_frameworks.py  check_coverage.py  check_feature_sync.py  check_specs.sh  check_version_tag.py  post_install_smoke.sh
search/: search_index.json
specs/: cli-kernel-commands.spec  e2e-post-install-smoke.spec  e2e-serve-roundtrip.spec  harness-agent-spec.spec  instance-dispatch.spec  kernel-agent-loop.spec  kernel-agent-loop.spec.md  kernel-approval.spec  kernel-bus-and-abi.spec  kernel-bus-and-abi.spec.md  kernel-compaction.spec  kernel-config-store.spec  kernel-config.spec  kernel-cross-turn-history.spec  kernel-health.spec  kernel-logging.spec  kernel-providers-namespace.spec  kernel-registry.spec  kernel-registry.spec.md  kernel-session-context.spec  kernel-session-tape.spec  llm-provider-contract.spec  plugin-agent_tool.spec  plugin-llm_echo.spec  plugin-llm_openai.spec  plugin-mcp_bridge.spec  plugin-memory_sqlite.spec  plugin-mercari_jp.spec  plugin-strategy_react.spec  plugin-tool_bash.spec  plugin-web-config-api.spec  plugin-web-instance-crud.spec  plugin-web-instance-ui.spec  plugin-web-ui.spec  plugin-web.spec  tool-contract.spec
src/yaya/: AGENT.md  __init__.py  __main__.py
src/yaya/cli/: AGENT.md  __init__.py  output.py
src/yaya/core/: AGENT.md  updater.py
src/yaya/kernel/: AGENT.md  __init__.py  approval.py  bus.py  compaction.py  config.py  config_store.py  errors.py  events.py  llm.py  logging.py  loop.py  payload.py  plugin.py  providers.py  registry.py  session.py  session_context.py  session_persister.py  tape_context.py  tool.py
src/yaya/plugins/: AGENT.md  __init__.py
tests/: AGENT.md  conftest.py  test_smoke.py
tests/bdd/: conftest.py  test_kernel_agent_loop.py  test_kernel_bus.py  test_kernel_compaction.py  test_kernel_cross_turn_history.py  test_kernel_health.py  test_kernel_registry.py  test_kernel_session.py  test_kernel_session_context.py  test_plugin_web.py  test_plugin_web_instance_ui.py  test_plugin_web_ui.py  test_plugins.py
tests/bdd/features/: cli-kernel-commands.feature  e2e-post-install-smoke.feature  harness-agent-spec.feature  instance-dispatch.feature  kernel-agent-loop.feature  kernel-approval.feature  kernel-bus-and-abi.feature  kernel-compaction.feature  kernel-config-store.feature  kernel-config.feature  kernel-cross-turn-history.feature  kernel-health.feature  kernel-logging.feature  kernel-providers-namespace.feature  kernel-registry.feature  kernel-session-context.feature  kernel-session-tape.feature  llm-provider-contract.feature  plugin-agent_tool.feature  plugin-llm_echo.feature  plugin-llm_openai.feature  plugin-mcp_bridge.feature  plugin-memory_sqlite.feature  plugin-mercari_jp.feature  plugin-strategy_react.feature  plugin-tool_bash.feature  plugin-web-config-api.feature  plugin-web-instance-crud.feature  plugin-web-instance-ui.feature  plugin-web-ui.feature  plugin-web.feature  tool-contract.feature
tests/cli/: test_config.py  test_doctor.py  test_hello.py  test_help_snapshot.py  test_output.py  test_plugin.py  test_serve.py  test_session.py  test_toast.py  test_update.py  test_version.py
tests/cli/__snapshots__/: test_help_snapshot.ambr
tests/core/: test_updater.py  test_updater_apply.py  test_updater_properties.py
tests/e2e/: conftest.py  test_binary_smoke.py  test_broken_binary_gate.py  test_cli_smoke.py  test_plugin_list_smoke.py  test_serve_roundtrip.py
tests/e2e/bdd/: test_harness_agent_spec.py
tests/kernel/: test_approval.py  test_bus.py  test_compaction.py  test_config.py  test_config_store.py  test_errors.py  test_events.py  test_llm.py  test_logging.py  test_loop.py  test_payload.py  test_plugin.py  test_providers_bootstrap.py  test_providers_view.py  test_registry.py  test_session.py  test_session_bus.py  test_session_context.py  test_strategy_hot_provider.py  test_tool.py
tests/plugins/: test_health_checks.py
tests/plugins/agent_tool/: _fake_strategy.py  test_agent_tool.py  test_agent_tool_integration.py
tests/plugins/llm_echo/: test_echo.py
tests/plugins/llm_openai/: test_llm_openai.py
tests/plugins/mcp_bridge/: _fake_server.py  (+1 more)
tests/scripts/: test_check_banned_frameworks.py  test_check_coverage.py  test_check_feature_sync.py  test_check_llm_plugin_imports.py  test_check_spec_result.py  test_detect_owning_spec.py
wiki/: index.html
wiki/AGENT/: index.html
wiki/lessons-learned/: index.html
wiki/log/: index.html
(+175 files in other folders)
