[project]
name = "yaya"
version = "0.0.1"
description = "A Python agent."
authors = [{ name = "ryan", email = "hoca54302@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "loguru>=0.7.2",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/rararulab/yaya"
Changelog = "https://github.com/rararulab/yaya/blob/main/CHANGELOG.md"

[project.scripts]
yaya = "yaya.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "tox-uv>=1.16.0",
    "pyinstaller>=6.11.0",
    "pytest-httpx>=0.35",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.115.0",
    "syrupy>=4.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-terminal>=4.7.0",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/yaya", "tests", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/yaya"]

[tool.mypy]
files = ["src"]
python_version = "3.14"
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
    "--timeout-method=thread",
]
markers = [
    "unit: fast, isolated, pure-logic tests (default)",
    "integration: touches filesystem, subprocess, or local network",
    "slow: >1s tests; skippable via `-m 'not slow'`",
]

[tool.coverage.run]
source = ["src/yaya"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # stub-only bodies
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731", "TRY003", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
