[project]
name = "yaya"
version = "0.0.2"
description = "A Python agent."
authors = [{ name = "ryan", email = "hoca54302@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "loguru>=0.7.2",
    "httpx>=0.28.1",
    "openai>=1.52.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Event-sourcing primitives for the session tape store (issue #32).
    # republic ships Tape / TapeEntry / TapeStore / AsyncTapeStore /
    # TapeQuery / TapeContext / ForkTapeStore — plain data structures
    # with a persistence-adapter layer. It is NOT an agent / chain /
    # orchestration framework and therefore not covered by the ban in
    # AGENT.md §4.
    "republic>=0.5.4",
]

[project.entry-points."yaya.plugins.v1"]
strategy_react = "yaya.plugins.strategy_react:plugin"
memory_sqlite = "yaya.plugins.memory_sqlite:plugin"
llm_openai = "yaya.plugins.llm_openai:plugin"
llm_echo = "yaya.plugins.llm_echo:plugin"
tool_bash = "yaya.plugins.tool_bash:plugin"
mcp_bridge = "yaya.plugins.mcp_bridge:plugin"
agent_tool = "yaya.plugins.agent_tool:plugin"
web = "yaya.plugins.web:plugin"

[project.urls]
Repository = "https://github.com/rararulab/yaya"
Changelog = "https://github.com/rararulab/yaya/blob/main/CHANGELOG.md"

[project.scripts]
yaya = "yaya.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "pyright>=1.1.400",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "tox-uv>=1.16.0",
    "pyinstaller>=6.11.0",
    "pytest-httpx>=0.35",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.15.0",
    "pytest-bdd>=8.0",
    "hypothesis>=6.115.0",
    "syrupy>=4.7.0",
    "websockets>=13.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-terminal>=4.7.0",
    "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/yaya", "tests", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/yaya"]

# Authoritative strict-mode configuration. Changes that weaken any
# setting below must go through a `governance` issue. The justfile
# recipe invokes `mypy --strict` explicitly so the flag is visible in
# task output; every option here is a belt-and-braces layer on top.
[tool.mypy]
files = ["src"]
python_version = "3.14"
strict = true
# `strict = true` implies all of the below; they are pinned so a
# future `strict = false` cannot silently turn them off individually.
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
extra_checks = true
show_error_codes = true
ignore_missing_imports = true
# `disallow_any_unimported` flags returns from third-party packages
# that arrive as `Any` because we don't have stubs. With our current
# deps (pydantic, fastapi, openai, typer, etc.) we ship no `Any`
# leaks across the import boundary; pinning the flag locks that in.
disallow_any_unimported = true
# Additional opt-in error codes — strict turns most things on, but
# these are off-by-default and worth catching:
#   redundant-expr     — `x is None or x is None` and similar dead logic.
#   truthy-bool        — `if some_object:` where `some_object` is a class
#                        instance (almost always a bug — caller meant
#                        `is not None` or an explicit attribute check).
#   truthy-iterable    — `if some_list_factory:` (always-truthy callable).
#   unused-awaitable   — coroutine result discarded without `await`.
#   possibly-undefined — name used on a branch where it may not be bound.
#   explicit-override  — methods overriding a base must be marked with
#                        `@typing.override` (PEP 698). Catches stale
#                        overrides when the base method is renamed.
# `unused-ignore` is intentionally omitted: half our ignores are
# guardrails for asymmetric mypy/pyright narrowing where a future
# mypy version may stop firing the warning. We rely on
# `warn_unused_ignores = true` (above, mypy-side) plus pyright's
# `reportUnnecessaryTypeIgnoreComment = "error"` to flag genuinely
# stale ignores; the cross-check is enough.
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
    "possibly-undefined",
    "explicit-override",
]

# ``republic`` ships without a py.typed marker. Combined with
# ``ignore_missing_imports = true`` every symbol transits as implicit
# ``Any`` and trips ``disallow_any_unimported`` wherever we touch
# republic's tape primitives — which is exactly the kernel's session
# and persister layer. We disable the check on those two modules
# rather than weaken the project-wide flag. Every other file keeps
# the strict bar; when republic ships a ``py.typed`` marker we drop
# these overrides. See issue #32 rationale in the PR body.
[[tool.mypy.overrides]]
module = [
    "yaya.kernel.compaction",
    "yaya.kernel.session",
    "yaya.kernel.session_persister",
    "yaya.kernel.tape_context",
]
disallow_any_unimported = false
warn_return_any = false

# Second type-checker gate. Pyright is the engine behind VS Code's Pylance,
# so its CI verdict matches what contributors see live in the editor — closes
# the "red in IDE, green in CI" gap. Strict mode matches mypy strict above.
[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = false
# Narrowing-related flags worth surfacing explicitly (strict turns them on,
# but pinning them here means a future `typeCheckingMode = "basic"` can't
# silently relax the bar).
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitOverride = "error"
# `reportShadowedImports` removed because pyright 1.1.400 does not
# recognize it (Config unrecognized). If upstream adds it back as a
# real rule, reinstate with severity "error".
reportUninitializedInstanceVariable = "error"
reportInvalidTypeVarUse = "error"
# typer registers commands via decorators — pyright can't see that a
# function is "used" through @app.command(). Disabling globally is the
# documented workaround; the equivalent check for dead code is ruff F401.
reportUnusedFunction = "none"
# Every other rule stays at strict-mode defaults (error). Real bugs —
# untyped vars, Unknown transits, private-API reaches across classes —
# fail the build. If a specific callsite is a legitimate tool gap,
# suppress it with an explicit `# pyright: ignore[<rule>]` comment on
# the line and say why in the diff.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default suite = unit + integration-by-file-layout, but exclude `tests/e2e/`
# which expects yaya installed on PATH. Run `just test-e2e` to invoke those
# against an installed wheel.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
    "--timeout-method=thread",
    "--ignore=tests/e2e",
]
markers = [
    "unit: fast, isolated, pure-logic tests (default)",
    "integration: touches filesystem, subprocess, or local network",
    "slow: >1s tests; skippable via `-m 'not slow'`",
]

[tool.coverage.run]
source = ["src/yaya"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 88
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # stub-only bodies
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90",
    "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731", "TRY003", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
